--- a/flight-board-demo-ui/src/app/shared/header/header.component.html
+++ b/flight-board-demo-ui/src/app/shared/header/header.component.html
@@ -16,7 +16,7 @@
   </header>
 </div>
 
-<form name="loginForm" #loginForm="ngForm" (ngSubmit)="loginForm.form.valid && onSubmitLoginForm()" novalidate>
+<form name="loginForm" #loginForm="ngForm" (ngSubmit)="loginForm.form.valid && onSubmit()" novalidate>
   <div class="modal fade" id="loginModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
