--- a/flight-board-demo-ui/src/app/features/arrival/arrival.component.html
+++ b/flight-board-demo-ui/src/app/features/arrival/arrival.component.html
@@ -1,6 +1,9 @@
 <div class="container">
 
-    <form class="border rounded p-3" name="addArrivalForm" #addArrivalForm="ngForm" (ngSubmit)="addArrivalForm.form.valid && onSubmit()" novalidate >
+    <form class="border rounded p-3" name="addArrivalForm" #addArrivalForm="ngForm" (ngSubmit)="addArrivalForm.form.valid && onSubmit()" novalidate>
+        <div class="row mb-3 text-center">
+            <div class="col"><h5>Admin feature</h5></div>
+        </div>
         <div class="row mb-3">
             <div class="col">
                 <div class="input-group">
@@ -53,7 +56,7 @@
                 </div>
             </div>
             <div class="col-md-1">
-                <button type="submit" class="btn btn-primary" [disabled]="!addArrivalForm.valid">Add</button>
+                <button type="submit" class="btn btn-primary" [disabled]="!addArrivalForm.valid"><i class="fas fa-plus"></i> Add</button>
             </div>
         </div>
     </form>
@@ -66,29 +69,35 @@
                 <th>Origin</th>
                 <th>Airline</th>
                 <th>Flight #</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th>?</th>
                 <td>?</td>
                 <td>?</td>
                 <td>?</td>
                 <td>?</td>
+                <td>?</td>
+                <td>
+                    <button type="button" class="btn btn-outline-dark btn-sm"><i class="far fa-edit"></i></button>
+                </td>
             </tr>
             <tr>
-                <th>?</th>
                 <td>?</td>
                 <td>?</td>
                 <td>?</td>
                 <td>?</td>
+                <td>?</td>
+                <td><button type="button" class="btn btn-outline-dark btn-sm"><i class="far fa-edit"></i></button></td>
             </tr>
             <tr>
-                <th>?</th>
                 <td>?</td>
                 <td>?</td>
                 <td>?</td>
                 <td>?</td>
+                <td>?</td>
+                <td><button type="button" class="btn btn-outline-dark btn-sm"><i class="far fa-edit"></i></button></td>
             </tr>
         </tbody>
     </table>
